--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,7 @@ name: Build/release
 
 on:
   push:
-    branches: 
-      - main
-    tags:
-      - '*'
+    branches: [main]
 
 jobs:
   release:
@@ -28,10 +25,11 @@ jobs:
         uses: samuelmeuli/action-electron-builder@v1
         with:
           build_script_name: build
+          release: true
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
 
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          # release: ${{ startsWith(github.ref, 'refs/tags/v') }}
